[gd_scene load_steps=4 format=3 uid="uid://c6f2ubsyleoie"]

[ext_resource type="Script" path="res://Render.gd" id="1_qth3d"]
[ext_resource type="Script" path="res://UI.gd" id="2_jwqy4"]

[sub_resource type="Theme" id="Theme_bsdfu"]

[node name="display" type="Node2D"]

[node name="background" type="ColorRect" parent="."]
offset_right = 1182.0
offset_bottom = 692.0

[node name="anchor" type="Node2D" parent="."]
visible = false
position = Vector2(260, 46)
script = ExtResource("1_qth3d")
obstacle_color = Color(0.929688, 0.485148, 0.464333, 1)
visited_color = Color(0.244067, 0.839844, 0.308523, 1)
special_color = Color(0.165993, 0.120827, 0.316406, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("2_jwqy4")

[node name="Menu" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 841.0
offset_top = 84.0
offset_right = 1105.0
offset_bottom = 715.0

[node name="gen" type="Button" parent="UI/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 61.0
offset_right = 249.0
offset_bottom = 114.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.14902, 0.14902, 0.14902, 1)
theme_override_colors/font_hover_color = Color(0.14902, 0.14902, 0.14902, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "GENERATE MAZE"

[node name="modetoggle" type="CheckButton" parent="UI/Menu"]
layout_mode = 0
offset_left = 142.0
offset_top = 233.0
offset_right = 186.0
offset_bottom = 264.0
focus_mode = 0

[node name="Label" type="Label" parent="UI/Menu/modetoggle"]
layout_mode = 0
offset_left = 60.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0.298039, 0.298039, 0.298039, 1)
text = "DFS"

[node name="Label2" type="Label" parent="UI/Menu/modetoggle"]
layout_mode = 0
offset_left = -51.0
offset_top = 3.0
offset_right = -11.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0.298039, 0.298039, 0.298039, 1)
text = "BFS"

[node name="Label3" type="Label" parent="UI/Menu/modetoggle"]
layout_mode = 0
offset_left = -2.0
offset_top = -37.0
offset_right = 45.0
offset_bottom = -14.0
theme_override_colors/font_color = Color(0.298039, 0.298039, 0.298039, 1)
text = "Show:"

[node name="visited" type="CheckBox" parent="UI/Menu"]
layout_mode = 0
offset_left = 90.0
offset_top = 348.0
offset_right = 232.0
offset_bottom = 379.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_hover_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.296875, 0.296875, 0.296875, 1)
text = " Visited Spaces"

[node name="distance" type="CheckBox" parent="UI/Menu"]
layout_mode = 0
offset_left = 90.0
offset_top = 390.0
offset_right = 244.0
offset_bottom = 421.0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0.492188, 0.492188, 0.492188, 1)
theme_override_colors/font_hover_pressed_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_hover_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.296875, 0.296875, 0.296875, 1)
text = " Distance Scores"

[node name="path" type="CheckBox" parent="UI/Menu"]
layout_mode = 0
offset_left = 90.0
offset_top = 307.0
offset_right = 244.0
offset_bottom = 338.0
focus_mode = 0
theme = SubResource("Theme_bsdfu")
theme_override_colors/font_hover_pressed_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_hover_color = Color(0.148438, 0.148438, 0.148438, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.296875, 0.296875, 0.296875, 1)
text = " Traversal Path"

[node name="modelabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 45.0
offset_top = 12.0
offset_right = 228.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_font_sizes/font_size = 24
text = "breadth
first
traversal"
horizontal_alignment = 2

[node name="creditbutton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 604.0
offset_right = 90.0
offset_bottom = 636.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.14902, 0.14902, 0.14902, 1)
theme_override_colors/font_hover_color = Color(0.14902, 0.14902, 0.14902, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "credits"

[node name="credits" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 246.0
offset_top = 13.0
offset_right = 1147.0
offset_bottom = 642.0
mouse_filter = 1

[node name="Label" type="Label" parent="UI/credits"]
layout_mode = 0
offset_left = 321.0
offset_top = 234.0
offset_right = 600.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Andrew Rucks
11/2/2024

godotengine.org/license"
horizontal_alignment = 1

[connection signal="pressed" from="UI/Menu/gen" to="UI" method="_on_gen_pressed"]
[connection signal="toggled" from="UI/Menu/modetoggle" to="UI" method="_on_modetoggle_toggled"]
[connection signal="toggled" from="UI/Menu/visited" to="UI" method="_on_visited_toggled"]
[connection signal="toggled" from="UI/Menu/distance" to="UI" method="_on_distance_toggled"]
[connection signal="toggled" from="UI/Menu/path" to="UI" method="_on_path_toggled"]
[connection signal="pressed" from="UI/creditbutton" to="UI" method="_on_creditbutton_pressed"]
